# SimpleCamera

./: CMakeLists.txt  README.md  simple_camera.cpp  simple_camera.h
